--- a/Pagina.html
+++ b/Pagina.html
@@ -10,9 +10,7 @@
 
 <body>
 
-<h1>Medio Ambiente</h1> 
-<img src="Publicidad.jpg" alt="Zed" title="Defensa del medio ambiente" height="500"/>
-
+<h1>Medio Ambiente</h1>
 <table border=1>
 
 
@@ -22,9 +20,9 @@
 <Table border=1 width=100% bgcolor=blue>
     <Tr>
     <Td><h2><font color="#040303">Inicio</font></h2></Td>
-    <Td><h2><font color="#040303"><a href= "coltans.html">>Coltan</a></font></h2></Td>
-    <Td><h2><font color="#040303"><a href="Urbina.html">>Conflicto Armado y Explotacion de Oro</a></font></h2></Td>
-    <Td><h2><font color="#040303"><a href="Mineria en Colombia.html">>Fiebre Del Oro</a></font></h2></Td>
+    <Td><h2><font color="#040303">Coltan</font></h2></Td>
+    <Td><h2><font color="#040303">a href="Urbina.html">>Conflicto Armado y Explotacion de Oro</a></font</h2></Td>
+    <Td><h2><font color="#040303">Fiebre Del Oro</font></h2></Td>
     <Td><h2><font color="#040303"><a href="Quimica.html">>Oro Ilegal</a></font</h2></Td> 
 </Table>
 
@@ -68,11 +66,10 @@ naturaleza ni con el medio ambiente y ademas dañandolo.
 </p>
 
 <img src ="Mapa.jpg" heigth="400"/>
-</td>
-<td>
-<img src ="Oro.jpg" height="400"/>
 
-<img src="exs.jpg"  height="300"/>
+<img src=oro.jpg" height="300"/>
+
+<img src="exs.png"  height="300"/>
 
 
 <h1>Consecuencias de la mineria en Colombia</h1>
@@ -83,33 +80,7 @@ naturaleza ni con el medio ambiente y ademas dañandolo.
  </p>
         <img src="mineriacolombiana.jpg" height="300"/>
 
-<html>
-<body>
 
-<h1>Coltan</h1>
-
-<head>
-<title>Coltan</title>
-<!-- <link rel="stylesheet" href="estilos.css"> -->
-<link rel="shorcut icon" type="image/x-icon" href="coltan.jpg">     
-</head>
-<body>
-
-    
-</Table>
-
-<h1>COLTAN</h1>
-
-<font>
-El coltan es un material que destruye muchos recursos naturales, así como explotar a los trabajadores , sin darles el pago debido.
-</font>
-                                
-
-<IMG SRC="coltanx2.jpg" WIDTH=300 HEIGHT=300 BORDER=2 ALT="Obra de camilo jimenez" >
-
-
-</html>
-</body>
 
 
 
