--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    
     <Td><h2><font color="#040303"><a href="Urbina.html">Conflicto Armado y Explotacion de Oro</a></font></h2></Td>
     <Td><h2><font color="#040303"><a href="Mineria en Colombia.html">>Fiebre Del Oro</a></font></h2></Td>
-          <Td><h2><font color="#040303"><a href="coltan2.html">Coltan</a></font></h2></Td>
+          <Td><h2><font color="#040303"><a href="col.html">Coltan</a></font></h2></Td>
     <Td><h2><font color="#040303"><a href="Quimica.html">>Oro Ilegal</a></font></h2></Td> 
     </Tr>
 </Table>
