--- a/Urbina.html
+++ b/Urbina.html
@@ -1,62 +1,57 @@
 <html>
      <head>
-    <Table border=1 width=100% bgcolor=green>
-    <Tr>
-    <Td><h2><font color="#040303">Inicio</font></h2></Td>
-    <Td><h2><font color="#040303">Coltan</font></h2></Td>
-    <Td><h2><font color="#040303">Conflicto Armado y Explotacion de Oro</font></h2></Td>
-    <Td><h2><font color="#040303">Fiebre Del Oro</font></h2></Td>
-    <Td><h2><font color="#040303"></font>Oro Ilegal</h2></Td> 
-</Table>
-     <title>conflicto armado y explotacion de oro</title>
+      <title>conflicto armado y explotacion de oro</title>
 <!-- <link rel="stylesheet" href="estilos.css"> -->
 <link rel="shorcut icon" type="image/x-icon" href="MAPA.jpg">
 </head>
 
 <body>
 <!--h1 se utiliza para titulares-->
+      <Table border=1 width=100% bgcolor=green>
+ 
+    <Td><h2><font color="#040303">Inicio</font></h2></Td>
+    <Td><h2><font color="#040303">Coltan</font></h2></Td>
+    <Td><h2><font color="#040303">Conflicto Armado y Explotacion de Oro</font></h2></Td>
+    <Td><h2><font color="#040303">Fiebre Del Oro</font></h2></Td>
+    <Td><h2><font color="#040303"></font>Oro Ilegal</h2></Td> 
+    
+</Table>
 <h1>
 CONFLICTO ARMADO Y EXPLOTACION DE ORO</h1>
-<Tr>
-<Td
+
 
 <p>
-Algunas compaÒias colombianas han tomado mucho territorio para la 
+Algunas compa√±ias colombianas han tomado mucho territorio para la 
 explotacion der oro dejando a familias pobres sin relacion con la 
-naturaleza ni con el medio ambiente y ademas daÒandolo. 
+naturaleza ni con el medio ambiente y ademas da√±andolo. 
 </p>
 
 <img src="MAPA.jpg" alt="grafica de explotacion de oro" title="grafica explotacion de oro"  height="300" height= "300"/>
-
-
-
 <a href="MAPA.jpg">Ir a la imagen</a>
 
 
-<hr/> 
+
 <h2>EXPLOTACION DE ORO</h2>
 <img src="oro.jpg"=alt="explotacion de oro" title="explotacion de oro" height="300" height="100"/>
-<br/>Desde hace bastante tiempo no se escuchan buenas noticias relacionadas con la explotaciÛn de oro en Colombia 
-En el sector predominan informes que se refieren a la minerÌa ilegal, 
-al lavado de activos y a los problemas ambientales.</br>
-<br/>Y en las ˙ltimas semanas se han acentuado los sucesos negativos. La firma canadiense Gran Colombia Gold, propietaria de 111 tÌtulos mineros en Segovia (Antioquia) -donde operan los activos 
-de la extinta Frontino Gold Mines- y Marmato (Caldas), est· en dificultades financieras. Por su parte, la sudafricana AngloGold Ashanti anunciÛ que recortar· inversiones este aÒo, y aunque sus 
-directivos lo desmienten, en el mercado hay fuertes rumores sobre la posibilidad de que salga de Colombia. Como si faltara ruido en el sector, la comercializadora m·s grande del paÌs, 
-la empresa Goldex, fue acusada por la FiscalÌa de lavar activos por 2,3 billones de pesos.</br>
+<br/>Desde hace bastante tiempo no se escuchan buenas noticias relacionadas con la explotaci√≥n de oro en Colombia 
+En el sector predominan informes que se refieren a la miner√≠a ilegal, 
+al lavado de activos y a los problemas ambientales.
+<br/>Y en las √∫ltimas semanas se han acentuado los sucesos negativos. La firma canadiense Gran Colombia Gold, propietaria de 111 t√≠tulos mineros en Segovia (Antioquia) -donde operan los activos 
+de la extinta Frontino Gold Mines- y Marmato (Caldas), est√° en dificultades financieras. Por su parte, la sudafricana AngloGold Ashanti anunci√≥ que recortar√° inversiones este a√±o, y aunque sus 
+directivos lo desmienten, en el mercado hay fuertes rumores sobre la posibilidad de que salga de Colombia. Como si faltara ruido en el sector, la comercializadora m√°s grande del pa√≠s, 
+la empresa Goldex, fue acusada por la Fiscal√≠a de lavar activos por 2,3 billones de pesos.
 <br/> La mineria se ha convertido en la base de la economia de muchas regiones en Colombia.
 El dinero que se saca de la mineria se distribuye en: un 50% para los trabajadores,un 5% para inversion social y un 3% para asesoria tecnica y legal.</br>
-<br/>De las 55 toneladas de oro que se producen al aÒo en Colombia, solo siete corresponden a las grandes firmas, la mayorÌa de capital extranjero, que cumplen 
-las normas. Santiago ¡ngel, presidente de ACM, afirma que si todo se formalizara la naciÛn recibirÌa anualmente m·s de 2.000 millones de dÛlares, es decir, el sector serÌa uno de los 
-grandes generadores de divisas. Pero como el 85 por ciento de la minerÌa es ilegal esos recursos van a parar a otras manos.</br>
+<br/>De las 55 toneladas de oro que se producen al a√±o en Colombia, solo siete corresponden a las grandes firmas, la mayor√≠a de capital extranjero, que cumplen 
+las normas. Santiago √Ångel, presidente de ACM, afirma que si todo se formalizara la naci√≥n recibir√≠a anualmente m√°s de 2.000 millones de d√≥lares, es decir, el sector ser√≠a uno de los 
+grandes generadores de divisas. Pero como el 85 por ciento de la miner√≠a es ilegal esos recursos van a parar a otras manos.<br>
 
 <h2>CONFLICTO ARMADO</h2>
 <img src="exs.jpg" alt="conflicto armado por minerales" title="conflicto aramado por minerales" height="300" height="100"/>
 <br/>En Colombia se vive un conflicto por el territorio para la explotacion de tierras por recursos minerales, por este conflicto hay personas que se desplazan de estas zonas, El conflicto armado se 
 da cuando el estado o los paramilitares piensan que en la zona donde esta esta mineria es una zona guerrillera por lo tanto el que vive hay es guerrillero.Los paramilitares ademas tambien mataban por minerales y por el dinero que daba la medicina.</br>
-<br/>los militares viajan en helicÛpteros, llevando un escuadrÛn Èlite armado con rifles de asalto al nuevo frente de la larga guerra de su paÌs: las minas de oro. con el auge de los precios del oro, las FARC y las bandas criminales que surgieron de los grupos paramilitares ahora utilizan ese dinero para financiar la guerra.</br>  
+<br/>los militares viajan en helic√≥pteros, llevando un escuadr√≥n √©lite armado con rifles de asalto al nuevo frente de la larga guerra de su pa√≠s: las minas de oro. con el auge de los precios del oro, las FARC y las bandas criminales que surgieron de los grupos paramilitares ahora utilizan ese dinero para financiar la guerra.<br>  
 
-<p>
 
-</p>
    </body>
-<html>
+</html>
