--- a/Urbina.html
+++ b/Urbina.html
@@ -26,13 +26,12 @@ explotacion der oro dejando a familias pobres sin relacion con la
 naturaleza ni con el medio ambiente y ademas dañandolo. 
 </p>
 
-<img src="MAPA.jpg" alt="grafica de explotacion de oro" title="grafica explotacion de oro"  height="300" height= "300"/>
-<a href="MAPA.jpg">Ir a la imagen</a>
+<img src="exs.jpg" alt="conflicto armado por minerales" title="conflicto aramado por minerales" height="300" height="100"/>
 
 
 
 <h2>EXPLOTACION DE ORO</h2>
-<img src="oro.jpg"=alt="explotacion de oro" title="explotacion de oro" height="300" height="100"/>
+<img src="exs.jpg" alt="conflicto armado por minerales" title="conflicto aramado por minerales" height="300" height="100"/>
 <br/>Desde hace bastante tiempo no se escuchan buenas noticias relacionadas con la explotación de oro en Colombia 
 En el sector predominan informes que se refieren a la minería ilegal, 
 al lavado de activos y a los problemas ambientales.
