--- a/Urbina.html
+++ b/Urbina.html
@@ -31,7 +31,7 @@ naturaleza ni con el medio ambiente y ademas dañandolo.
 
 
 <h2>EXPLOTACION DE ORO</h2>
-<img src="exs.jpg" alt="conflicto armado por minerales" title="conflicto aramado por minerales" height="300" height="100"/>
+<img src="oro.jpg" alt="conflicto armado por minerales" title="conflicto aramado por minerales" height="300" height="100"/>
 <br/>Desde hace bastante tiempo no se escuchan buenas noticias relacionadas con la explotación de oro en Colombia 
 En el sector predominan informes que se refieren a la minería ilegal, 
 al lavado de activos y a los problemas ambientales.
