--- a/Urbina.html
+++ b/Urbina.html
@@ -26,7 +26,7 @@ explotacion der oro dejando a familias pobres sin relacion con la
 naturaleza ni con el medio ambiente y ademas dañandolo. 
 </p>
 
-<img src="exs.jpg" alt="conflicto armado por minerales" title="conflicto aramado por minerales" height="300" height="100"/>
+<img src="mapa.jpg" alt="conflicto armado por minerales" title="conflicto aramado por minerales" height="300" height="100"/>
 
 
 
